Prefix toplevel cmake options with CRAB

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,20 +38,19 @@ if (CUSTOM_BOOST_ROOT)
   set (Boost_NO_SYSTEM_PATHS "ON")
 endif()
 
-option (ENABLE_TESTS "Enable tests" OFF)
-option (USE_LDD   "Enable Ldd library" OFF)
-option (USE_APRON "Enable Apron library" OFF)
-option (USE_ELINA "Enable Elina library" OFF)
-option (USE_LOG   "Enable logging for debugging purposes" ON)
-option (BUILD_CRAB_LIBS_SHARED "Build all Crab libraries dynamically." OFF)
+option (CRAB_USE_LDD   "Enable Ldd library" OFF)
+option (CRAB_USE_APRON "Enable Apron library" OFF)
+option (CRAB_USE_ELINA "Enable Elina library" OFF)
+option (CRAB_BUILD_LIBS_SHARED "Build all Crab libraries dynamically." OFF)
+option (CRAB_ENABLE_TESTS "Enable tests" OFF)
 
-if (USE_APRON AND USE_ELINA)
+if (CRAB_USE_APRON AND CRAB_USE_ELINA)
   message(FATAL_ERROR "Apron and Elina are not compatible: choose one")
 endif()
 
 # Directory where all (binary) tests will be located
 # Binary tests do not go to install directory by default
-if (ENABLE_TESTS)
+if (CRAB_ENABLE_TESTS)
   if (NOT TEST_DIR)
     set(TEST_DIR ${CMAKE_BINARY_DIR}/test-bin)
   endif()  
@@ -62,30 +61,30 @@ set(_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES ${CMAKE_FIND_LIBRARY_SUFFIXES})
 
 # Support preference of static libs by adjusting CMAKE_FIND_LIBRARY_SUFFIXES
 #set(CMAKE_FIND_LIBRARY_SUFFIXES .so .dylib .a)
-if (NOT BUILD_CRAB_LIBS_SHARED)
+if (NOT CRAB_BUILD_LIBS_SHARED)
    set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" ${CMAKE_FIND_LIBRARY_SUFFIXES})
 endif ()   
 
 # To remember the last configuration
-if (ENABLE_TESTS)
-  message(STATUS "cmake crab configuration: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DUSE_APRON=${USE_APRON} -DUSE_ELINA=${USE_ELINA} -DUSE_LDD=${USE_LDD} -DBUILD_CRAB_LIBS_SHARED=${BUILD_CRAB_LIBS_SHARED} -DENABLE_TESTS=${ENABLE_TESTS} -DTEST_DIR=${TEST_DIR}")
+if (CRAB_ENABLE_TESTS)
+  message(STATUS "cmake crab configuration: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED} -DCRAB_ENABLE_TESTS=${CRAB_ENABLE_TESTS} -DTEST_DIR=${TEST_DIR}")
 else()
-  message(STATUS "cmake crab configuration: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DUSE_APRON=${USE_APRON} -DUSE_ELINA=${USE_ELINA} -DUSE_LDD=${USE_LDD} -DBUILD_CRAB_LIBS_SHARED=${BUILD_CRAB_LIBS_SHARED}")
+  message(STATUS "cmake crab configuration: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED}")
 endif()  
 
-if (BUILD_CRAB_LIBS_SHARED)
+if (CRAB_BUILD_LIBS_SHARED)
   set(_DYNAMIC_LIBS_EXC_STR "")
-  if(USE_LDD)
+  if(CRAB_USE_LDD)
     set(_DYNAMIC_LIBS_EXC_STR "${_DYNAMIC_LIBS_EXC_STR}\n  - except ldd ")
   endif()
-  if(USE_APRON)
+  if(CRAB_USE_APRON)
     set(_DYNAMIC_LIBS_EXC_STR "${_DYNAMIC_LIBS_EXC_STR}\n  - except apron")
   endif()
   message (STATUS "Crab libraries and dependencies are built dynamically ${_DYNAMIC_LIBS_EXC_STR}")  
   set(CRAB_LIBS_TYPE SHARED)
 else()
   set(_STATIC_LIBS_EXC_STR "")
-  if(USE_ELINA)
+  if(CRAB_USE_ELINA)
     set(_STATIC_LIBS_EXC_STR "${_STATIC_LIBS_EXC_STR}\n  - except elina")
   endif()
   message (STATUS "Crab libraries and dependencies are built statically ${_STATIC_LIBS_EXC_STR}")  
@@ -104,10 +103,10 @@ if (NOT CMAKE_INSTALL_RPATH )
   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/crab/lib")
 endif()
 
-if (ENABLE_TESTS)
+if (CRAB_ENABLE_TESTS)
   find_package (Boost 1.55.0 COMPONENTS program_options REQUIRED)
   set(Boost_USE_STATIC_LIBS ON)
-  if (BUILD_CRAB_LIBS_SHARED)
+  if (CRAB_BUILD_LIBS_SHARED)
     set(Boost_USE_STATIC_LIBS OFF)
   endif ()
 else ()
@@ -118,7 +117,7 @@ if (Boost_FOUND)
 endif ()
 
 set(GMP_USE_STATIC_LIBS ON)
-if (BUILD_CRAB_LIBS_SHARED)
+if (CRAB_BUILD_LIBS_SHARED)
   set(GMP_USE_STATIC_LIBS OFF)
 endif ()
   
@@ -143,7 +142,7 @@ endif ()
 
 find_package (Git)
 
-if (USE_LDD)
+if (CRAB_USE_LDD)
 if (GIT_FOUND)
     set (LDD_TAG "origin/master" CACHE STRING "ldd tag to use")
     set (LDD_REPO "https://github.com/seahorn/ldd.git"
@@ -172,7 +171,7 @@ endif()
 endif ()
 
 
-if (USE_APRON OR USE_ELINA)
+if (CRAB_USE_APRON OR CRAB_USE_ELINA)
   get_filename_component (GMP_SEARCH_PATH ${GMP_INCLUDE_DIR} PATH)
   find_package(MPFR REQUIRED)
   if (MPFR_FOUND)
@@ -194,7 +193,7 @@ if (USE_APRON OR USE_ELINA)
   endif ()
 endif ()
 
-if (USE_APRON)
+if (CRAB_USE_APRON)
 if (GIT_FOUND)
   if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     # Mac OS X specific code
@@ -221,7 +220,7 @@ endif()
 endif()
 
 
-if (USE_ELINA)
+if (CRAB_USE_ELINA)
 if (GIT_FOUND)
   set (ELINA_TAG "master" CACHE STRING "elina tag to use")
   ExternalProject_Add(elina
@@ -242,7 +241,7 @@ else ()
 endif()
 endif()
 
-if (USE_LDD)
+if (CRAB_USE_LDD)
   find_package(Ldd)
   if (LDD_FOUND)
     include_directories (${LDD_INCLUDE_DIR})
@@ -259,7 +258,7 @@ if (USE_LDD)
   endif()
 endif ()
 
-if (USE_APRON)
+if (CRAB_USE_APRON)
   find_package(Apron)
   if (APRON_FOUND)
     include_directories (${APRON_INCLUDE_DIR})
@@ -275,7 +274,7 @@ if (USE_APRON)
   endif()
 endif ()
 
-if (USE_ELINA)
+if (CRAB_USE_ELINA)
   find_package(Elina)
   if (ELINA_FOUND)
     include_directories (${ELINA_INCLUDE_DIR})
@@ -296,34 +295,29 @@ endif ()
 
 include_directories (${Crab_SOURCE_DIR}/include)
 
-if (USE_LDD)
+if (CRAB_USE_LDD)
   set_target_properties(ldd PROPERTIES EXCLUDE_FROM_ALL ON)
   message (STATUS "The boxes domain will be available")  
 else ()
   message (STATUS "The boxes domain will not be available")  
 endif ()
 
-if (USE_APRON)
+if (CRAB_USE_APRON)
   set_target_properties(apron PROPERTIES EXCLUDE_FROM_ALL ON)
   message (STATUS "The apron domains will be available")
 else ()
   message (STATUS "The apron domains will not be available")
 endif ()
 
-if (USE_ELINA)
+if (CRAB_USE_ELINA)
   set_target_properties(elina PROPERTIES EXCLUDE_FROM_ALL ON)
   message (STATUS "The elina domains will be available")
 else ()
   message (STATUS "The elina domains will not be available")
 endif ()
 
-if (NOT USE_LOG)
-  set (NCRABLOG TRUE)
-  message (STATUS "Analysis logging for debugging is disabled")
-else ()
-  set (NCRABLOG FALSE)
-  message (STATUS "Analysis logging for debugging is enabled")
-endif ()
+# Enable always logging
+set(NCRABLOG TRUE)
 
 # check for rt lib. Not needed on OSX.
 # find_library(RT_LIB NAMES rt)
@@ -333,15 +327,15 @@ endif ()
 # mark_as_advanced(RT_LIB)
 
 # XXX: needed if shared libraries
-# if (BUILD_CRAB_LIBS_SHARED)
-#   if (USE_APRON)
+# if (CRAB_BUILD_LIBS_SHARED)
+#   if (CRAB_USE_APRON)
 #     if (CMAKE_LIBRARY_OUTPUT_DIRECTORY)
 #       install(FILES ${APRON_LIBRARY} DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 #     else ()
 #       install(FILES ${APRON_LIBRARY} DESTINATION lib)
 #     endif ()
 #   endif ()
-#   if (USE_LDD)
+#   if (CRAB_USE_LDD)
 #     if (CMAKE_LIBRARY_OUTPUT_DIRECTORY)
 #       install(FILES ${LDD_LIBRARY} DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 #     else ()
@@ -406,7 +400,7 @@ configure_file(include/crab/config.h.cmake
 
 add_subdirectory(lib)
 
-if (ENABLE_TESTS)
+if (CRAB_ENABLE_TESTS)
    message (STATUS "Tests will be compiled")
    add_subdirectory(tests)
 endif ()
@@ -419,19 +413,19 @@ install(DIRECTORY include/
         PATTERN "config.h.cmake" EXCLUDE)
 install(FILES ${CMAKE_BINARY_DIR}/include/crab/config.h DESTINATION crab/include/crab)
 
-if (USE_LDD)
+if (CRAB_USE_LDD)
   ExternalProject_Get_Property (ldd INSTALL_DIR)  
   install(DIRECTORY ${INSTALL_DIR}
          DESTINATION .)
 endif()
 
-if (USE_APRON)
+if (CRAB_USE_APRON)
   ExternalProject_Get_Property (apron INSTALL_DIR)  
   install(DIRECTORY ${INSTALL_DIR}
           DESTINATION .)
 endif()
 
-if (USE_ELINA)
+if (CRAB_USE_ELINA)
   ExternalProject_Get_Property (elina INSTALL_DIR)  
   install(DIRECTORY ${INSTALL_DIR}
     DESTINATION .)
