Disable temporary coverage build in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ env:
      - UBUNTU_DIST=bionic
        BUILD_TYPE=Release
        EXTERNAL_DOMAIN_LIB=apron
-     - UBUNTU_DIST=bionic
-       BUILD_TYPE=Coverage
-       EXTERNAL_DOMAIN_LIB=apron              
+     # - UBUNTU_DIST=bionic
+     #   BUILD_TYPE=Coverage
+     #   EXTERNAL_DOMAIN_LIB=apron              
      - UBUNTU_DIST=bionic
        BUILD_TYPE=Release
        EXTERNAL_DOMAIN_LIB=elina
