cmake: bump boost and use BOOST_NO_EXCEPTIONS if tests compiled

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ if (CUSTOM_BOOST_ROOT)
   set (Boost_NO_SYSTEM_PATHS "ON")
 endif()
 
+
 option (CRAB_USE_LDD   "Enable Ldd library" OFF)
 option (CRAB_USE_APRON "Enable Apron library" OFF)
 option (CRAB_USE_ELINA "Enable Elina library" OFF)
@@ -105,13 +106,14 @@ if (NOT CMAKE_INSTALL_RPATH )
 endif()
 
 if (CRAB_ENABLE_TESTS)
-  find_package (Boost 1.55.0 COMPONENTS program_options REQUIRED)
+  find_package (Boost 1.65.0 COMPONENTS program_options REQUIRED)
   set(Boost_USE_STATIC_LIBS ON)
   if (CRAB_BUILD_LIBS_SHARED)
     set(Boost_USE_STATIC_LIBS OFF)
   endif ()
+  add_definitions(-DBOOST_NO_EXCEPTIONS)
 else ()
-  find_package (Boost 1.55.0)
+  find_package (Boost 1.65.0)
 endif ()
 if (Boost_FOUND)
   include_directories (${Boost_INCLUDE_DIRS})
