perf(generic_abstract_domain): reduce compilation time.
New abstract domain called generic_abstract_domain that by using the
type-erasure idiom it hides the actual abstract domain. This should
help in reducing compilation time since we should have now only once
copy of the analyzers.

It is up to the client to use or not. If tests are enabled then it can
be used with cmake option -DCRAB_USE_GENERIC_WRAPPER. By default, it
is not used.

Apart from compilation time, no differences in analysis time should be
noticeable although we need a bit more testing.

In terms of precision, AFIK the only place where it could be less
precise is in the bottom-up inter-procedural analysis where some
conversion happens between the top-down and bottom-up abstract
domains.  If the two domains are actually the same and contains array,
disjunctive or non-linear constraints then the conversion might lose
precision because it cannot tell they are actually the same domain.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,8 @@ option(CRAB_BUILD_LIBS_SHARED "Build all Crab libraries dynamically." OFF)
 option(CRAB_ENABLE_STATS "Enable stats" ON)
 ## Relevant only for developers
 option(CRAB_ENABLE_TESTS "Enable tests" OFF)
+option(CRAB_USE_GENERIC_WRAPPER
+  "If tests enabled then use the generic abstract domain" OFF)
 
 if (CRAB_USE_APRON AND CRAB_USE_ELINA)
   message(FATAL_ERROR "Apron and Elina are not compatible: choose one")
@@ -114,6 +116,10 @@ if (CRAB_ENABLE_TESTS)
     set(Boost_USE_STATIC_LIBS OFF)
   endif ()
   add_definitions(-DBOOST_NO_EXCEPTIONS)
+
+  if (CRAB_USE_GENERIC_WRAPPER)
+    set(USE_GENERIC_WRAPPER)
+  endif ()
 else ()
   find_package (Boost 1.65.0)
 endif ()
@@ -416,6 +422,9 @@ add_subdirectory(lib)
 
 if (CRAB_ENABLE_TESTS)
   message (STATUS "Tests will be compiled")
+  if (CRAB_USE_GENERIC_WRAPPER)
+    message(STATUS "Compiling tests using generic wrapper for abstract domains")
+  endif()
   add_subdirectory(tests)
 endif ()
 
