cmake: improved messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ option(CRAB_USE_GENERIC_WRAPPER
   "If tests enabled then use the generic abstract domain" OFF)
 
 if (CRAB_USE_APRON AND CRAB_USE_ELINA)
-  message(FATAL_ERROR "Apron and Elina are not compatible: choose one")
+  message(FATAL_ERROR "Crab: Apron and Elina are not compatible. Choose one")
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -75,9 +75,9 @@ endif ()
 
 # To remember the last configuration
 if (CRAB_ENABLE_TESTS)
-  message(STATUS "cmake crab configuration: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED} -DCRAB_ENABLE_TESTS=${CRAB_ENABLE_TESTS} -DTEST_DIR=${TEST_DIR}")
+  message(STATUS "Crab: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED} -DCRAB_ENABLE_TESTS=${CRAB_ENABLE_TESTS} -DTEST_DIR=${TEST_DIR}")
 else()
-  message(STATUS "cmake crab configuration: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED}")
+  message(STATUS "Crab: cmake -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX} -DCRAB_USE_APRON=${CRAB_USE_APRON} -DCRAB_USE_ELINA=${CRAB_USE_ELINA} -DCRAB_USE_LDD=${CRAB_USE_LDD} -DCRAB_BUILD_LIBS_SHARED=${CRAB_BUILD_LIBS_SHARED}")
 endif()  
 
 if (CRAB_BUILD_LIBS_SHARED)
@@ -88,14 +88,14 @@ if (CRAB_BUILD_LIBS_SHARED)
   if(CRAB_USE_APRON)
     set(_DYNAMIC_LIBS_EXC_STR "${_DYNAMIC_LIBS_EXC_STR}\n  - except apron")
   endif()
-  message (STATUS "Crab libraries and dependencies are built dynamically ${_DYNAMIC_LIBS_EXC_STR}")  
+  message (STATUS "Crab: libraries and dependencies are built dynamically ${_DYNAMIC_LIBS_EXC_STR}")  
   set(CRAB_LIBS_TYPE SHARED)
 else()
   set(_STATIC_LIBS_EXC_STR "")
   if(CRAB_USE_ELINA)
     set(_STATIC_LIBS_EXC_STR "${_STATIC_LIBS_EXC_STR}\n  - except elina")
   endif()
-  message (STATUS "Crab libraries and dependencies are built statically ${_STATIC_LIBS_EXC_STR}")  
+  message (STATUS "Crab: libraries and dependencies are built statically ${_STATIC_LIBS_EXC_STR}")  
   set(CRAB_LIBS_TYPE STATIC)
 endif ()
 
@@ -177,7 +177,7 @@ if (GIT_FOUND)
       LOG_BUILD 1
       LOG_INSTALL 1)
 else ()
-  message (STATUS "Could not find git. Not downloading ldd")
+  message (STATUS "Crab: could not find git. Not downloading ldd")
 endif()
 endif ()
 
@@ -200,8 +200,9 @@ if (CRAB_USE_ELINA)
       #message(STATUS "Building opt-oct with SSE")
       set (IS_VECTOR "IS_VECTOR=-DVECTOR")
       set (IS_SSE "IS_SSE=-DSSE")
+      message(WARNING "Crab: building elina oct with vectorized operations.")      
     else ()
-      message(WARNING "Building opt-oct without vectorized operations.")
+      message(WARNING "Crab: building elina oct without vectorized operations.")
     endif ()
   endif ()
 endif()
@@ -228,7 +229,7 @@ if (GIT_FOUND)
     LOG_INSTALL 1
     LOG_BUILD 1)
 else ()
-  message (STATUS "Could not find git. Not downloading apron")
+  message (STATUS "Crab: could not find git. Not downloading apron")
 endif()
 endif()
 
@@ -250,7 +251,7 @@ if (GIT_FOUND)
     LOG_INSTALL 1
     LOG_BUILD 1)
 else ()
-  message (STATUS "Could not find git. Not downloading elina")
+  message (STATUS "Crab: could not find git. Not downloading elina")
 endif()
 endif()
 
@@ -264,7 +265,7 @@ if (CRAB_USE_LDD)
   else()
      ExternalProject_Get_Property (ldd INSTALL_DIR)
      set (LDD_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of ldd" FORCE)
-     message (WARNING "No ldd found. Run \n\tcmake --build . --target ldd && cmake ${CMAKE_SOURCE_DIR}")
+     message (WARNING "Crab: no ldd found. Run \n\tcmake --build . --target ldd && cmake ${CMAKE_SOURCE_DIR}")
      # restore old CMAKE_FIND_LIBRARY_SUFFIXES
      set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES})     
      return()
@@ -280,7 +281,7 @@ if (CRAB_USE_APRON)
   else()
     ExternalProject_Get_Property (apron INSTALL_DIR)
     set (APRON_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of apron" FORCE)
-    message (WARNING "No apron found. Run \n\tcmake --build . --target apron && cmake ${CMAKE_SOURCE_DIR}")
+    message (WARNING "Crab: no apron found. Run \n\tcmake --build . --target apron && cmake ${CMAKE_SOURCE_DIR}")
     # restore old CMAKE_FIND_LIBRARY_SUFFIXES
     set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES})     
     return()
@@ -299,7 +300,7 @@ if (CRAB_USE_ELINA)
   else()
     ExternalProject_Get_Property (elina INSTALL_DIR)
     set (ELINA_ROOT ${INSTALL_DIR} CACHE FILEPATH "Forced location of elina" FORCE)
-    message (WARNING "No elina found. Run \n\tcmake --build . --target elina && cmake ${CMAKE_SOURCE_DIR}")
+    message (WARNING "Crab: no elina found. Run \n\tcmake --build . --target elina && cmake ${CMAKE_SOURCE_DIR}")
     # restore old CMAKE_FIND_LIBRARY_SUFFIXES
     set(CMAKE_FIND_LIBRARY_SUFFIXES ${_CRAB_ORIG_CMAKE_FIND_LIBRARY_SUFFIXES})         
     return()
@@ -311,23 +312,23 @@ include_directories (${Crab_SOURCE_DIR}/include)
 
 if (CRAB_USE_LDD)
   set_target_properties(ldd PROPERTIES EXCLUDE_FROM_ALL ON)
-  message (STATUS "The boxes domain will be available")  
+  message (STATUS "Crab: Boxes domain will be available")  
 else ()
-  message (STATUS "The boxes domain will not be available")  
+  message (STATUS "Crab: Boxes domain will not be available")  
 endif ()
 
 if (CRAB_USE_APRON)
   set_target_properties(apron PROPERTIES EXCLUDE_FROM_ALL ON)
-  message (STATUS "The apron domains will be available")
+  message (STATUS "Crab: Apron domains will be available")
 else ()
-  message (STATUS "The apron domains will not be available")
+  message (STATUS "Crab: Apron domains will not be available")
 endif ()
 
 if (CRAB_USE_ELINA)
   set_target_properties(elina PROPERTIES EXCLUDE_FROM_ALL ON)
-  message (STATUS "The elina domains will be available")
+  message (STATUS "Crab: Elina domains will be available")
 else ()
-  message (STATUS "The elina domains will not be available")
+  message (STATUS "Crab: Elina domains will not be available")
 endif ()
 
 # Enable always logging
@@ -335,10 +336,10 @@ set(NCRABLOG FALSE)
 
 # Enable or disable stats gathering
 if (CRAB_ENABLE_STATS)
-  message (STATUS "Compiled Crab with support for gathering statistics")  
+  message (STATUS "Crab: compiled with support for gathering statistics")  
   set(CRAB_STATS TRUE)
 else()
-  message (STATUS "Compiled Crab without support for gathering statistics")    
+  message (STATUS "Crab: compiled without support for gathering statistics")    
   set(CRAB_STATS FALSE)
 endif()
     
@@ -421,9 +422,9 @@ configure_file(include/crab/config.h.cmake
 add_subdirectory(lib)
 
 if (CRAB_ENABLE_TESTS)
-  message (STATUS "Tests will be compiled")
+  message (STATUS "Crab: tests will be compiled")
   if (CRAB_USE_GENERIC_WRAPPER)
-    message(STATUS "Compiling tests using generic wrapper for abstract domains")
+    message(STATUS "Crab: compiling tests using generic wrapper for abstract domains")
   endif()
   add_subdirectory(tests)
 endif ()
