--- a/.github/workflows/test-crab-docker.yml
+++ b/.github/workflows/test-crab-docker.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: dev
+    branches: master
   pull_request:
-    branches: dev
+    branches: master
   schedule:
     - cron: 0 0 * * *  # run every day at UTC 00:00
 
@@ -22,14 +22,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Check Out Repo 
+      - name: Check out Repo 
         uses: actions/checkout@v2
         with:
-          ref: dev # only checkout dev
+          ref: master # only checkout master
       - name: Build crab+apron and run tests 
-        run: docker build --build-arg BRANCH=dev --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_apron:bionic -f docker/crab.apron.Dockerfile .
+        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_apron:bionic -f docker/crab.apron.Dockerfile .
       - name: Build crab+elina and run tests 
-        run: docker build --build-arg BRANCH=dev --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_elina:bionic -f docker/crab.elina.Dockerfile .
+        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_elina:bionic -f docker/crab.elina.Dockerfile .
       # Logging in using this mechanism prints the following warning
       # WARNING! Your password will be stored unencrypted in /home/runner/.docker/config.json.
       # There does not seem to be an easy way around it though using docker actions may mitigate
@@ -37,7 +37,7 @@ jobs:
       - name: Login to DockerHub Registry
         if: ${{ github.event_name == 'schedule' }}  # only push if nightly run
         run: echo ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} | docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
-      - name: tag and push crab (nightly)
+      - name: Tag and push crab (nightly) to DockerHub
         if: ${{ github.event_name == 'schedule' }}  # only push if nightly run
         run: |
           docker push seahorn/crab_apron:bionic
