--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(Crab ${CRAB_LIBS_TYPE}
   wrapint.cpp
   ##variable factory
   varname_factory.cpp
+  ##types
+  allocation_sites.cpp
   )
 
 target_link_libraries(Crab ${GMP_LIB})
