--- a/external/Makefile
+++ b/external/Makefile
@@ -1,17 +1,20 @@
 #------------------------------------------------------------------------------------#
 #                                  INSTRUCTIONS
 #------------------------------------------------------------------------------------#
+#  0. Define variables BOOST_ROOT and GMP_DIR
 #  1. Type `make crab_install`
 #  2. Type `make all`
 #  3. Type `./domain` or `./analysis`
 #------------------------------------------------------------------------------------#
 
-PWD=$(shell pwd)
-CRAB_INSTALL=${PWD}/crab-install
+BOOST_ROOT=
+GMP_DIR=
 
+PWD=$(shell pwd)
 UNAME := $(shell uname)
+
+CRAB_INSTALL=${PWD}/crab-install
 CRAB_LIBS = $(CRAB_INSTALL)/crab/lib/libCrab.a
-LDLIBS := $(CRAB_LIBS) -lgmp -lm -lstdc++ 
 
 CXXFLAGS := \
      -Wall -Werror -Wfatal-errors \
@@ -19,29 +22,27 @@ CXXFLAGS := \
      -Wno-uninitialized \
      -DBSD -DHAVE_IEEE_754 -DSIZEOF_VOID_P=8 -DSIZEOF_LONG=8 \
      -I $(CRAB_INSTALL)/crab/include \
+     -I $(BOOST_ROOT)/include \
+     -I $(GMP_DIR)/include \
      -O2 -g -std=c++11
 
 ifeq ($(UNAME),Darwin)
-## For Mojave
 CXXFLAGS += -Wno-nullability-completeness
-CXXFLAGS += -isystem /usr/local/include 
-CXXFLAGS += -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk
+CXXFLAGS += -isysroot $(shell xcrun --show-sdk-path)
 endif
 
-# Lookup paths for crab shared libraries
-# LDFLAGS := -Wl,-rpath,$(CRAB_INSTALL)/crab/lib/
-# For gmp library (you might need to adapt this)
-LDFLAGS := -L/usr/local/lib
+LDFLAGS := $(CRAB_LIBS)
+LDFLAGS += -L$(GMP_DIR)/lib -lgmp
 
 all: domain analysis
 
 %.o:  $(CXX) $(CXXFLAGS) $< -c -o $@
 
 domain: domain.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) domain.o $(LDLIBS) -o domain
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) domain.o -o domain
 
 analysis: analysis.o
-	$(CXX) $(CXXFLAGS) $(LDFLAGS) analysis.o $(LDLIBS) -o analysis
+	$(CXX) $(CXXFLAGS) $(LDFLAGS) analysis.o -o analysis
 
 clean:
 	rm -f domain analysis *.a *.o
