--- a/.github/workflows/test-crab-docker.yml
+++ b/.github/workflows/test-crab-docker.yml
@@ -26,9 +26,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master # only checkout master
-      - name: Build crab+apron and run tests 
+      - name: Build crab without external libraries and run tests 
+        run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab:bionic -f docker/crab.Dockerfile .
+      - name: Build crab+apron+ldd-boxes and run tests 
         run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_apron:bionic -f docker/crab.apron.Dockerfile .
-      - name: Build crab+elina and run tests 
+      - name: Build crab+elina+ldd-boxes and run tests 
         run: docker build --build-arg BRANCH=master --build-arg UBUNTU=bionic --build-arg BUILD_TYPE=Release -t seahorn/crab_elina:bionic -f docker/crab.elina.Dockerfile .
       # Logging in using this mechanism prints the following warning
       # WARNING! Your password will be stored unencrypted in /home/runner/.docker/config.json.
@@ -40,5 +42,6 @@ jobs:
       - name: Tag and push crab (nightly) to DockerHub
         if: ${{ github.event_name == 'schedule' }}  # only push if nightly run
         run: |
+          docker push seahorn/crab:bionic	
           docker push seahorn/crab_apron:bionic
           docker push seahorn/crab_elina:bionic 
